--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <nav>
+        <div class="logo">Food, LLC </div>
+    </nav>
     <div>
         <h1 class="navTitle">Our Menue</h1>
         <div class="titleline"></div>
